# modelscope

./: .gitignore  ExcelColumnTranslate.py  GLM_SDK练习.py  Gradio_Bot_multimode.py  Gradio_test.py  Gradio_test2.py  Gradio_test3.py  Image2Cartoon_APP.ipynb  LICENSE  OCR.ipynb  OSS_aliyun_client.py  ParaformerOffline.py  ParaformerOnline.py  README.md  SFT_practice.ipynb  SambertHifigan.ipynb  UniASR语音识别_normal.ipynb  UniASR语音识别_normal.py  Whisper_OpenAI长音频.py  app.py  env_update  hf_SFT_practice.py  hugface_learn.ipynb  ptts_main.ipynb  whisper_HuggingFace实现.py  whisper_HuggingFace实现2.py  whisper练习.py  人像处理.ipynb  文本分析.ipynb  汽车图片牌照识别.ipynb  汽车图牌照识别.py  美体抠图3d.ipynb
AI_Agent/: AudioEchoCancellation&NoiseSuppression.py  AudioEchoCancellation.py  Chatbot_UI.py  Chatbot_UI_glm&gemini.py  LiteLLM_practice.py  Qwen-Deep-Research.py  V2RayServer.sh  async_iterate_audioPlay.py  async_pyaudio_record_player.py  gemini_MModalLive.py  gemini_chatbot_UI.py  gemini_practice.py  pdf_markdown.py  vps_script.sh
Agentic GraphRAG/: AgenticGraphRAG_agent.py  AgenticGraphRAG_functions.py  ChromaDB_practice.py  langextract_practice.py  langgraph.json
Avatar/: Azure_TTS.py  Replicate_Practice.py
DingTalkAPP/: ChBOT_OpenAPI.py  ChatBOT_APP.py  ChatBOT_OpenAPI.py  HumanoidRobot.py  (+4 more)
deepseek_deep_research/backend/: LICENSE  Makefile  langgraph.json  langgraph_sample.json  pyproject.toml  test-agent.ipynb
deepseek_deep_research/backend/examples/: cli_research.py
deepseek_deep_research/backend/src/agent/: __init__.py  app.py  configuration.py  graph.py  state.py  tools_and_schemas.py
(+87 files in other folders)
